--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2020-03-06  Stackfield      <stackfield0trpg@gmail.com>
+	* rebuild and adjust autotool files.
+	* imcanna.c: add "ja" in im_canna_info.
+
+	* Release 
 2004-08-04  Yukihiro Nakai  <ynakai@redhat.com>
 
 	* imcanna.c: Still fix for kakutei-if-end-of=bunsetsu.
