--- a/ChangeLog
+++ b/ChangeLog
@@ -1,13 +1,18 @@
-2020-03-06  Stackfield      <stackfield0trpg@gmail.com>
+2020-03-09  Stackfield      <stackfield0trpg@gmail.com>
+	* imcanna.c: prevent to clear prefocused text
+	             when click other of window.
+	* configure.ac: Release 0.3.4
+
+2020-03-09  Stackfield      <stackfield0trpg@gmail.com>
 	* imcanna.c: fix to calculate candwin.
 	* configure.ac: Release 0.3.3.1
 
-2020-03-06  Stackfield      <stackfield0trpg@gmail.com>
+2020-03-08  Stackfield      <stackfield0trpg@gmail.com>
 	* missing: update
 	* imcanna.c: Change a style to show cardwin under cursor position.
 	* configure.ac: Release 0.3.3
 
-2020-03-06  Stackfield      <stackfield0trpg@gmail.com>
+2020-03-08  Stackfield      <stackfield0trpg@gmail.com>
 	* rebuild and adjust autotool files.
 	* imcanna.c: add "ja" in im_canna_info.
 
